--- a/flow-fundamentals/app/src/main/AndroidManifest.xml
+++ b/flow-fundamentals/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,13 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Coroutinesynchronization"
+        android:theme="@style/Theme.Flowfundamentals"
         tools:targetApi="31">
         <activity
-            android:name="com.mygomii.coroutine_synchronization.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Coroutinesynchronization">
+            android:theme="@style/Theme.Flowfundamentals">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
